# Multiple-Agents-

./: Memory_in_agent.ipynb  README.md  Tools.ipynb
Flow-Agent/: README1.md
Flow-Agent/src/flow_project/: __init__.py  hello.py  hello1.py  hello3.py
Simple-Litellm-Agent/: README.md  poem.txt  pyproject.toml
Simple-Litellm-Agent/src/llmlite/: main.py  main1.py
UV-Project/: README.md
UV-Project-01/: pyproject.toml
UV-Project-01/src/karachi/lahore/: myfile.py
UV-Project-01/src/project02/: hello.py
UV-Project-1/src/project02/: __init__.py
flow_project/: crewai_flow.html  fun_fact.md  pyproject.toml
flow_project/src/flow_project/: hello2.py  main.py
front-end-developer-AI-Agent/: README.md  pyproject.toml
front-end-developer-AI-Agent/src/multiple_agents1/: main.py  main1.py
front-end-developer-AI-Agent/src/multiple_agents1/crews/dev_crew/: dev_crew.py
front-end-developer-AI-Agent/src/multiple_agents1/crews/dev_crew/config/: agents.yaml  tasks.yaml
knowledge-base-agent/: README.md  pyproject.toml  text.txt
knowledge-base-agent/src/knowldge/: main.py  main1.py  main2.py
multiple-agents-with-tow-llms/: README.md  pyproject.toml
multiple-agents-with-tow-llms/src/multiple_agents1/: main1.py
multiple-agents-with-tow-llms/src/multiple_agents1/crews/dev_crew/: dev_crew.py
multiple-agents-with-tow-llms/src/multiple_agents1/crews/dev_crew/config/: agents.yaml  tasks.yaml
