[project]
name = "llmlite"
version = "0.1.0"
description = "llmlite using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "llmlite.main:kickoff"
plot = "llmlite.main:plot"
simple-llm = "llmlite.main1:run_litellm_flow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
