[project]
name = "project02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
piaic = "project02:function2"
karachi = "project02.hello:myfunction"
sir_zia = "karachi.lahore.myfile:greet"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
