[project]
name = "flow-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "litellm>=1.60.2",
]

[project.scripts]
flow-project = "flow_project:main"
my_camand = "flow_project.main:kickoff"
we_camand = "flow_project.hello:kickoff"
our_camand = "flow_project.hello1:kickoff"
our_camand_plot = "flow_project.hello1:plot" 
route_run = "flow_project.hello2:kickoff"
route_plot = "flow_project.hello2:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
